Helm chart now deploy CC and nginx successfully
- `src/lifecycle_hooks` is basically a stripped-down
version of the pre-start script from capi-release
- Included a script for building and exporting the Docker image
- Main config file for CC has a lot of placeholder values for things we
do not use yet
  - Only configurable values currently are just the foundation's system
  domain and connection properties that CC uses

[#169220657]

Co-authored-by: Jen Spinney <jspinney@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Chris Selzo <cselzo@pivotal.io>
Co-authored-by: Renee Chu <rchu@pivotal.io>
Co-authored-by: Seth Boyles <sboyles@pivotal.io>
Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>

--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "capi-k8s-release.fullname" . }}
+  name: {{ .Chart.Name }}
+  namespace: {{ .Release.Namespace }}
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 80
       protocol: TCP
       name: http
   selector:
