--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: capi-k8s-release
+description: CAPI
+name: capi
 version: 0.1.0
