--- a/templates/cloud_controller_ng.yaml
+++ b/templates/cloud_controller_ng.yaml
@@ -129,7 +129,7 @@ data:
     # TODO: change the UAA's Kube DNS name when the service is named correctly later
     uaa:
       url: https://uaa.{{ .Values.system_domain }}
-      internal_url: https://release-name-uaa-k8srelease.{{ .Release.Namespace }}.svc.cluster.local:8443
+      internal_url: http://uaa.{{ .Release.Namespace }}.svc.cluster.local:8080
       resource_id: cloud_controller,cloud_controller_service_permissions
       client_timeout: 60
       ca_file: /config/uaa/certs/uaa.crt
