--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -53,8 +53,8 @@ spec:
             mountPath: /data/cloud_controller_ng
           - name: cloud-controller-ng-yaml
             mountPath: /config
-          - name: uaa-certs
-            mountPath: /config/uaa/certs
+          # - name: uaa-certs
+          #   mountPath: /config/uaa/certs
         - name: nginx
           image: "nginx"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -87,9 +87,9 @@ spec:
         configMap:
           name: cloud-controller-ng-yaml
       # TODO: use a single CA for everything plz
-      - name: uaa-certs
-        secret:
-          secretName: uaa-certs
+      # - name: uaa-certs
+      #   secret:
+      #     secretName: uaa-certs
       - name: nginx
         configMap:
           name: nginx
