Actually configure connection to Eirini
- Assumes Eirini is deployed to the same namespace as the CC
- In order to talk to Eirini, this chart now allows deployers to specify
a secret that contains the TLS certs and CA needed to communicate
securely.
- To talk to UAA, we similarly allow a deployer to specify a secret
containing the certs for the CC to talk to UAA.

Signed-off-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/ccng-configmap.yaml
+++ b/templates/ccng-configmap.yaml
@@ -333,10 +333,13 @@ data:
       use_privileged_containers_for_staging: false
 
     opi:
-      url: "https://TODO.TODO"
+      url: "https://eirini.{{ .Release.Namespace }}.svc.cluster.local:8085"
       opi_staging: true
       enabled: true
       cc_uploader_url: "https://TODO.TODO"
+      ca_file: "/config/eirini/certs/tls.ca"
+      client_cert_file: "/config/eirini/certs/tls.crt"
+      client_key_file: "/config/eirini/certs/tls.key"
 
     perm:
       enabled: false
