--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -53,8 +53,14 @@ spec:
             mountPath: /data/cloud_controller_ng
           - name: cloud-controller-ng-yaml
             mountPath: /config
-          # - name: uaa-certs
-          #   mountPath: /config/uaa/certs
+          {{- if .Values.uaa_tls_certs_secret_name }}
+          - name: uaa-certs
+            mountPath: /config/uaa/certs
+          {{- end }}
+          {{- if .Values.eirini_tls_certs_secret_name }}
+          - name: eirini-certs
+            mountPath: /config/eirini/certs
+          {{- end }}
         - name: nginx
           image: "nginx"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -86,12 +92,20 @@ spec:
       - name: cloud-controller-ng-yaml
         configMap:
           name: cloud-controller-ng-yaml
-      # TODO: use a single CA for everything plz
-      # - name: uaa-certs
-      #   secret:
-      #     secretName: uaa-certs
       - name: nginx
         configMap:
           name: nginx
       - name: nginx-logs
         emptyDir: {}
+      # TODO: use a single CA for everything plz
+      {{- if .Values.uaa_tls_certs_secret_name }}
+      - name: uaa-certs
+        secret:
+          secretName: {{ .Values.uaa_tls_certs_secret_name }}
+      {{- end }}
+      {{- if .Values.eirini_tls_certs_secret_name }}
+      - name: eirini-certs
+        secret:
+          secretName: {{ .Values.eirini_tls_certs_secret_name }}
+      {{- end }}
+
