Add template for username lookup client's secret
- Needed so that CC can use this client to perform successful
`create-org` and `create-space` CF CLI commands
- Also provided a random value for this in the Helm values file used by
the testing deployment scripts

Signed-off-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/scripts/capi-values.yaml
+++ b/scripts/capi-values.yaml
@@ -13,3 +13,8 @@ blobstore:
   endpoint: http://capi-blobstore-minio.default.svc.cluster.local:9000
   access_key_id: AKIAIOSFODNN7EXAMPLE
   secret_access_key: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+
+uaa:
+  clients:
+    cloud_controller_username_lookup:
+      secret: supers3cret
