--- a/templates/ccng-configmap.yaml
+++ b/templates/ccng-configmap.yaml
@@ -267,7 +267,7 @@ data:
     uaa_client_scope: openid,cloud_controller_service_permissions.read
 
     cloud_controller_username_lookup_client_name: "cloud_controller_username_lookup"
-    cloud_controller_username_lookup_client_secret: TODO
+    cloud_controller_username_lookup_client_secret: {{ .Values.uaa.clients.cloud_controller_username_lookup.secret }}
 
     cc_service_key_client_name: "cc_service_key_client"
     cc_service_key_client_secret: TODO
