--- a/scripts/capi-values.yaml
+++ b/scripts/capi-values.yaml
@@ -18,3 +18,9 @@ uaa:
   clients:
     cloud_controller_username_lookup:
       secret: supers3cret
+
+worker:
+  name: worker
+
+apiServer:
+  name: api-server
