No longer pass worker name to rake task
- Worker now takes the name from the `HOSTNAME` environment variable,
which is present on k8s pods
- Also bumps CCNG submodule to pick up worker name change

[#169924701]

Co-authored-by: Renee Chu <rchu@pivotal.io>
Co-authored-by: Chris Selzo <cselzo@pivotal.io>

--- a/templates/worker_deployment.yaml
+++ b/templates/worker_deployment.yaml
@@ -25,7 +25,7 @@ spec:
         - name: {{ .Chart.Name  }}-{{ .Values.worker.name }}
           workingDir: "/cloud_controller_ng"
           command: ["/usr/local/bin/bundle"]
-          args: ["exec", "rake", "jobs:generic[cc_global_worker.{{ .Values.worker.name }}]"]
+          args: ["exec", "rake", "jobs:generic"]
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
