First pass at adding clock
[#169924708]

Co-authored-by: Chris Tarazi <ctarazi@pivotal.io>
Co-authored-by: Renee Chu <rchu@pivotal.io>

--- a/templates/clock_deployment.yaml
+++ b/templates/clock_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}-{{ .Values.worker.name }}
+  name: {{ .Chart.Name }}-{{ .Values.clock.name }}
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
@@ -22,10 +22,10 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       containers:
-        - name: {{ .Chart.Name  }}-{{ .Values.worker.name }}
+        - name: {{ .Chart.Name  }}-{{ .Values.clock.name }}
           workingDir: "/cloud_controller_ng"
           command: ["/usr/local/bin/bundle"]
-          args: ["exec", "rake", "jobs:generic"]
+          args: ["exec", "rake", "clock:start"]
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
