--- a/templates/ccng-configmap.yaml
+++ b/templates/ccng-configmap.yaml
@@ -346,4 +346,24 @@ data:
 
     max_labels_per_resource: 50
     max_annotations_per_resource: 200
-    perform_blob_cleanup: true
+
+    # worker property
+    perform_blob_cleanup: true 
+
+    # clock properties
+    app_usage_events:
+      cutoff_age_in_days: 31
+    audit_events: 
+      cutoff_age_in_days: 31
+    failed_jobs:
+      cutoff_age_in_days: 31
+    completed_tasks:
+      cutoff_age_in_days: 31
+    max_retained_deployments_per_app: 100
+    max_retained_builds_per_app: 100
+    max_retained_revisions_per_app: 100
+    diego_sync:
+      frequency_in_seconds: 30
+    pending_builds
+    pending_droplets
+    service_usage_events
