--- a/templates/ccng-configmap.yaml
+++ b/templates/ccng-configmap.yaml
@@ -368,5 +368,7 @@ data:
       frequency_in_seconds: 30
     pending_builds:
       frequency_in_seconds: 300
+      expiration_in_seconds: 42
     pending_droplets:
       frequency_in_seconds: 300
+      expiration_in_seconds: 42
