Allows the nginx image to be customized
With this change, consumers of the chart can host their own nginx image on a container
registry other than dockerhub. They can also modify the nginx image if
needed.

Signed-off-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/api_server_deployment.yaml
+++ b/templates/api_server_deployment.yaml
@@ -62,7 +62,7 @@ spec:
             mountPath: /config/eirini/certs
           {{- end }}
         - name: nginx
-          image: "nginx"
+          image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
           - containerPort: 80
