add capi-deployment-updater and fix logging for the other jobs
* also improves build-and-rollout-capi.sh & setup.sh

[finishes #170160715]

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Seth Boyles <sboyles@pivotal.io>

--- a/templates/api_server_deployment.yaml
+++ b/templates/api_server_deployment.yaml
@@ -7,6 +7,10 @@ metadata:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "capi-k8s-release.name" . }}
