Fix service selector to only match cloud controller
Co-authored-by: Ulrich Kramer <u.kramer@sap.com>

--- a/templates/api_server_deployment.yaml
+++ b/templates/api_server_deployment.yaml
@@ -13,11 +13,11 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Chart.Name }}-api-server
+      app.kubernetes.io/name: {{ .Chart.Name }}-api
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Chart.Name }}-api-server
+        app.kubernetes.io/name: {{ .Chart.Name }}-api
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
