cleanups & make clock stop flapping
* statically name, label, and label-select pods in each deployment
* set diego sync frequency to 0 to disable it
* bump CC for the diego sync fix

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Seth Boyles <sboyles@pivotal.io>

--- a/templates/api_server_deployment.yaml
+++ b/templates/api_server_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}-{{ .Values.apiServer.name }}
+  name: {{ .Chart.Name }}-api-server
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
@@ -13,13 +13,11 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "capi-k8s-release.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ .Chart.Name }}-api-server
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "capi-k8s-release.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ .Chart.Name }}-api-server
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -35,7 +33,7 @@ spec:
           - name: cloud-controller-ng-yaml
             mountPath: /config
       containers:
-        - name: {{ .Chart.Name  }}-{{ .Values.apiServer.name }}
+        - name: {{ .Chart.Name  }}-api-server
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           # ports:
