--- a/templates/clock_deployment.yaml
+++ b/templates/clock_deployment.yaml
@@ -13,13 +13,11 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "capi-k8s-release.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ .Chart.Name }}-clock
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "capi-k8s-release.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ .Chart.Name }}-clock
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
