--- a/templates/api_server_deployment.yaml
+++ b/templates/api_server_deployment.yaml
@@ -1,71 +1,52 @@
+#@ load("@ytt:data", "data")
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}-api-server
-  namespace: {{ .Release.Namespace }}
-  labels:
-{{ include "capi-k8s-release.labels" . | indent 4 }}
+  name: capi-api-server
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 2
   strategy:
     rollingUpdate:
       maxSurge: 0
       maxUnavailable: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Chart.Name }}-api-server
+      app.kubernetes.io/name: capi-api-server
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Chart.Name }}-api-server
+        app.kubernetes.io/name: capi-api-server
     spec:
-    {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+        - name: image-registry-credentials
       initContainers:
         - name: pre-start
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: #@ "{}-{}".format(data.values.image.repository, data.values.image.tag)
+          imagePullPolicy: #@ data.values.image.pullPolicy
           command:
           - /cloud_controller_ng/pre-start.sh
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
       containers:
-        - name: {{ .Chart.Name  }}-api-server
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          # ports:
-          #   - name: http
-          #     containerPort: 80
-          #     protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+        - name: capi-api-server
+          image:  #@ "{}-{}".format(data.values.image.repository, data.values.image.tag)
+          imagePullPolicy: #@ data.values.image.pullPolicy
           volumeMounts:
           - name: server-sock
             mountPath: /data/cloud_controller_ng
           - name: cloud-controller-ng-yaml
             mountPath: /config
-          {{- if .Values.uaa_tls_certs_secret_name }}
+          #@ if/end data.values.uaa.tls.certs_secret_name:
           - name: uaa-certs
             mountPath: /config/uaa/certs
-          {{- end }}
-          {{- if .Values.eirini_tls_certs_secret_name }}
+          #@ if/end data.values.eirini.tls.certs_secret_name:
           - name: eirini-certs
             mountPath: /config/eirini/certs
-          {{- end }}
         - name: nginx
-          image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: #@ "{}-{}".format(data.values.nginx.image.repository, data.values.nginx.image.tag)
+          imagePullPolicy: #@ data.values.nginx.image.pullPolicy
           ports:
           - containerPort: 80
           volumeMounts:
@@ -76,18 +57,6 @@ spec:
             mountPath: /data/cloud_controller_ng
           - name: nginx-logs
             mountPath: /cloud_controller_ng
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-    {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
       volumes:
       - name: server-sock
         emptyDir: {}
@@ -99,15 +68,13 @@ spec:
           name: nginx
       - name: nginx-logs
         emptyDir: {}
-      # TODO: use a single CA for everything plz
-      {{- if .Values.uaa_tls_certs_secret_name }}
+      #! TODO: use a single CA for everything plz
+      #@ if/end data.values.uaa.tls.certs_secret_name:
       - name: uaa-certs
         secret:
           secretName: {{ .Values.uaa_tls_certs_secret_name }}
-      {{- end }}
-      {{- if .Values.eirini_tls_certs_secret_name }}
+      #@ if/end data.values.eirini.tls.certs_secret_name:
       - name: eirini-certs
         secret:
           secretName: {{ .Values.eirini_tls_certs_secret_name }}
-      {{- end }}
 
