--- a/values.yaml
+++ b/values.yaml
@@ -1,8 +1,5 @@
-# Default values for capi-k8s-release.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 1
+#@data/values
+---
 
 image:
   repository: ""
@@ -13,25 +10,21 @@ nginx:
   image:
     repository: "nginx"
     tag: latest
+    pullPolicy: Always
 
 imagePullSecrets:
 - name: image-registry-credentials
-nameOverride: ""
-fullnameOverride: ""
 
 service:
   type: ClusterIP
   port: 80
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+uaa:
+  tls:
+    certs_secret_name:
 
+eirini:
+  tls:
+    certs_secret_name:
+
+resources: {}
