take cert-manager for a spin
- installed cert-manager out of band
- templates/certs.yaml to make an internal CA and then use it to sign
  underlying certs.
- try the following to get an internally signed client cert for cc

k get secrets cc-client-tls -o json \
  | jq '.data["tls.crt"]' -r \
  | base64 -D \
  | openssl x509 -text

Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/ccng-configmap.yaml
+++ b/templates/ccng-configmap.yaml
@@ -339,9 +339,9 @@ data:
       opi_staging: true
       enabled: true
       cc_uploader_url: "https://TODO.TODO"
-      ca_file: /config/opi/certs/opi.ca
-      client_cert_file: /config/opi/certs/opi.crt
-      client_key_file: /config/opi/certs/opi.key
+      ca_file: /config/certs/client/ca.crt
+      client_cert_file: /config/certs/client/tls.crt
+      client_key_file: /config/certs/client/tls.key
 
     perm:
       enabled: false
