--- a/templates/clock_deployment.yaml
+++ b/templates/clock_deployment.yaml
@@ -35,12 +35,12 @@ spec:
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
-          - name: opi-secrets
-            mountPath: /config/opi/certs
+          - name: cc-client-tls
+            mountPath: /config/certs/client/
       volumes:
       - name: cloud-controller-ng-yaml
         configMap:
           name: cloud-controller-ng-yaml
-      - name: opi-secrets
+      - name: cc-client-tls
         secret:
-          secretName: opi-secrets
+          secretName: cc-client-tls
