--- a/templates/kapp-deploy.yaml
+++ b/templates/kapp-deploy.yaml
@@ -82,49 +82,11 @@ rebaseRules:
       apiVersion: v1
       kind: PersistentVolumeClaim
 
-#! these rules make it so that cert-manager can generate versioned secrets,
-#! thus allowing us to fully rotate leaf certs with kapp
-- path: [data]
+- path: [spec, secretName]
   type: copy
-  sources: [new, existing]
-  resourceMatchers: &opaqueSecrets
-  - apiVersionKindMatcher: {apiVersion: v1, kind: Secret, type: "kubernetes.io/tls"}
-
-- path: [metadata, annotations, "cert-manager.io/alt-names"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: &opaqueSecrets
-  - apiVersionKindMatcher: {apiVersion: v1, kind: Secret, type: Opaque}
-
-- path: [metadata, annotations, "cert-manager.io/certificate-name"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: *opaqueSecrets
-
-- path: [metadata, annotations, "cert-manager.io/common-name"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: *opaqueSecrets
-
-- path: [metadata, annotations, "cert-manager.io/ip-sans"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: *opaqueSecrets
-
-- path: [metadata, annotations, "cert-manager.io/issuer-kind"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: *opaqueSecrets
-
-- path: [metadata, annotations, "cert-manager.io/issuer-name"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: *opaqueSecrets
-
-- path: [metadata, annotations, "cert-manager.io/uri-sans"]
-  type: copy
-  sources: [new, existing]
-  resourceMatchers: *opaqueSecrets
+  sources: [existing]
+  resourceMatchers:
+  - apiVersionKindMatcher: {apiVersion: cert-manager.io/v1alpha2, kind: Certificate}
 
 - path: [metadata, annotations, "deployment.kubernetes.io/revision"]
   type: copy
@@ -138,6 +100,9 @@ rebaseRules:
 diffAgainstLastAppliedFieldExclusionRules:
 - path: [metadata, annotations, "deployment.kubernetes.io/revision"]
   resourceMatchers: *builtinAppsDeploymentWithRevAnnKey
+- path: [spec, secretName]
+  resourceMatchers:
+  - apiVersionKindMatcher: {apiVersion: cert-manager.io/v1alpha2, kind: Certificate}
 
 ownershipLabelRules:
 - path: [metadata, labels]
@@ -230,7 +195,24 @@ templateRules:
       resourceMatchers:
       - apiVersionKindMatcher: {apiVersion: v1, kind: Pod}
       nameKey: secretName
+
+- resourceMatchers:
+  - apiVersionKindMatcher: {apiVersion: cert-manager.io/v1alpha2, kind: Certificate}
+  affectedResources:
+    objectReferences:
     - path: [spec]
       resourceMatchers:
       - apiVersionKindMatcher: {apiVersion: cert-manager.io/v1alpha2, kind: Certificate}
+      nameKey: secretName
+    - path: [spec, template, spec, containers, {allIndexes: true}, env, {allIndexes: true}, valueFrom, secretKeyRef]
+      resourceMatchers: *builtinAppsControllers
+    - path: [spec, template, spec, containers, {allIndexes: true}, envFrom, {allIndexes: true}, secretRef]
+      resourceMatchers: *builtinAppsControllers
+    # TODO uses secretName instead of name
+    - path: [spec, template, spec, volumes, {allIndexes: true}, secret]
+      resourceMatchers: *builtinAppsControllers
+      nameKey: secretName
+    - path: [spec, volumes, {allIndexes: true}, secret]
+      resourceMatchers:
+      - apiVersionKindMatcher: {apiVersion: v1, kind: Pod}
       nameKey: secretName
