Fix namespace for watcher deployment
It was deploying to the wrong namespace and using the wrong service
account
[#169373200]

Co-authored-by: Chris Tarazi <ctarazi@pivotal.io>
Co-authored-by: Seth Boyles <sboyles@pivotal.io>
Co-authored-by: Renee Chu <rchu@pivotal.io>

--- a/templates/kpack-watcher-deployment.yaml
+++ b/templates/kpack-watcher-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}-kpack-watcher
-  namespace: {{ .Release.Namespace }}
+  namespace: cf-system
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
@@ -19,7 +19,7 @@ spec:
       labels:
         app.kubernetes.io/name: {{ .Chart.Name }}-kpack-watcher
     spec:
-      serviceAccountName: controller
+      serviceAccountName: default
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
