Rework Dockerfile to use build-run pattern
This allows us to iterate much quicker on builds and pushes. Previously
if the Go source changed, the modules would have to be redownloaded. The
run image size is also very compact.

[#169373200]

--- a/dockerfiles/capi-kpack-watcher/Dockerfile
+++ b/dockerfiles/capi-kpack-watcher/Dockerfile
@@ -1,7 +1,21 @@
-FROM golang:latest
+FROM golang:1.13 as builder
 WORKDIR /capi-kpack-watcher
 
+# Copy the go source
 COPY capi-kpack-watcher/ .
-RUN cd /capi-kpack-watcher && go build
 
-ENTRYPOINT ["/capi-kpack-watcher/capi_kpack_watcher"]
+# cache deps before building and copying source so that we don't need to re-download as much
+# and so that source changes don't invalidate our downloaded layer
+RUN go mod download
+
+# Build
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a
+
+# Use distroless as minimal base image to package the manager binary
+# Refer to https://github.com/GoogleContainerTools/distroless for more details
+FROM gcr.io/distroless/static:nonroot
+WORKDIR /
+COPY --from=builder /capi-kpack-watcher/capi_kpack_watcher .
+USER nonroot:nonroot
+
+ENTRYPOINT ["/capi_kpack_watcher"]
