--- a/dockerfiles/capi-kpack-watcher/Dockerfile
+++ b/dockerfiles/capi-kpack-watcher/Dockerfile
@@ -2,13 +2,15 @@ FROM golang:1.13 as builder
 WORKDIR /capi-kpack-watcher
 
 # Copy the go source
-COPY capi-kpack-watcher/ .
+COPY capi-kpack-watcher/go.mod .
+COPY capi-kpack-watcher/go.sum .
 
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
 RUN go mod download
 
 # Build
+COPY capi-kpack-watcher/ .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a
 
 # Use distroless as minimal base image to package the manager binary
