--- a/templates/ngingx-configmap.yml
+++ b/templates/ngingx-configmap.yml
@@ -1,4 +1,26 @@
 ---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: cfroutesync-auth-metacontroller
+  namespace: cf-system
+spec:
+  selector:
+    matchLabels:
+      "app.kubernetes.io/name": "capi-api-server"
+  rules:
+    - from:
+        - source:
+            principals:
+              - "cluster.local/ns/metacontroller/sa/metacontroller"
+      to:
+        - operation:
+            paths: ["/internal/*"]
+    - to:
+        - operation:
+            methods: ["GET"]
+            paths: ["/"]
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -25,10 +47,17 @@ data:
       }
 
       server {
-          # TODO: get TLS working
-          # include nginx_server_mtls.conf;
+          listen 443 ssl;
 
-          listen 80;
+          ssl_ciphers DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+
+          # TODO: set this certs in the nginx-certs volume;
+          ssl_certificate        /etc/nginx-certs/tls.crt;
+          ssl_certificate_key    /etc/nginx-certs/tls.key;
+
+          ssl_protocols          TLSv1.2;
+          ssl_session_cache shared:SSL:10m;
+          ssl_session_timeout 10m;
 
           # TODO: move to a separate file and `include` like capi-release?
           # proxy and log all CC traffic
@@ -43,4 +72,21 @@ data:
             proxy_pass                  http://cloud_controller;
           }
       }
+
+    server {
+              listen 80;
+
+              # TODO: move to a separate file and `include` like capi-release?
+              # proxy and log all CC traffic
+              location / {
+                access_log  /cloud_controller_ng/nginx-access.log;
+                proxy_buffering             off;
+                proxy_set_header            Host $host;
+                proxy_set_header            X-Real_IP $remote_addr;
+                proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_redirect              off;
+                proxy_connect_timeout       10;
+                proxy_pass                  http://cloud_controller;
+              }
+          }
     }
