--- a/values.yaml
+++ b/values.yaml
@@ -5,9 +5,11 @@
 replicaCount: 1
 
 image:
-  repository: ""
+  repository: "gcr.io/cf-networking-images/capi-k8s-release/capi"
   tag: latest
   pullPolicy: Always
+  kpackWatcher:
+    repository: "gcr.io/cf-networking-images/capi-k8s-release/capi-kpack-watcher"
 
 nginx:
   image:
