Put resources into cf-system, cf-workloads ns
Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Chris Tarazi <ctarazi@pivotal.io>

[#170713361]

--- a/templates/api_server_deployment.yaml
+++ b/templates/api_server_deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}-api-server
-  namespace: {{ .Release.Namespace }}
+  namespace: cf-system
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
