--- a/templates/ccng-configmap.yaml
+++ b/templates/ccng-configmap.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloud-controller-ng-yaml
-  namespace: {{ .Release.Namespace }}
+  namespace: cf-system
 data:
   cloud_controller_ng.yml: |
     local_route: 0.0.0.0
