--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Chart.Name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: cf-system
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
