--- a/templates/worker_deployment.yaml
+++ b/templates/worker_deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}-worker
-  namespace: {{ .Release.Namespace }}
+  namespace: cf-system
   labels:
 {{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
