--- a/templates/clock_deployment.yml
+++ b/templates/clock_deployment.yml
@@ -1,10 +1,10 @@
+#@ load("@ytt:data", "data")
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Chart.Name }}-clock
+  name: capi-clock
   namespace: cf-system
-  labels:
-{{ include "capi-k8s-release.labels" . | indent 4 }}
 spec:
   replicas: 1
   strategy:
@@ -13,25 +13,21 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Chart.Name }}-clock
+      app.kubernetes.io/name: capi-clock
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Chart.Name }}-clock
+        app.kubernetes.io/name: capi-clock
     spec:
-    {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+      #@ if/end data.values.imagePullSecrets:
+      imagePullSecrets: #@ data.values.imagePullSecrets
       containers:
-        - name: {{ .Chart.Name  }}-clock
+        - name: capi-clock
           workingDir: "/cloud_controller_ng"
           command: ["/usr/local/bin/bundle"]
           args: ["exec", "rake", "clock:start"]
-          image: "{{ .Values.image.capi.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+          image: localhost:5000/capi
+          imagePullPolicy: Always
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
