Use kbld and allow deploying and building local ccng or deploying from dockerhub image
Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Seth Boyles <sboyles@pivotal.io>
Co-authored-by: Renee Chu <rchu@pivotal.io>
Co-authored-by: Oleksandr Slynko <oslynko@pivotal.io>

[finishes #170714119]

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -23,16 +23,15 @@ spec:
       imagePullSecrets: #@ data.values.imagePullSecrets
       initContainers:
         - name: pre-start
-          image: localhost:5000/capi
+          image: #@ data.values.image
           imagePullPolicy: Always
-          command:
-          - /cloud_controller_ng/pre-start.sh
+          command: ['bundle', 'exec', 'rake', 'db:setup_database']
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
       containers:
         - name: capi-api-server
-          image: localhost:5000/capi
+          image: #@ data.values.image
           imagePullPolicy: Always
           volumeMounts:
           - name: server-sock
