--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -26,7 +26,7 @@ spec:
           workingDir: "/cloud_controller_ng"
           command: ["/usr/local/bin/bundle"]
           args: ["exec", "rake", "deployment_updater:start"]
-          image: localhost:5000/capi
+          image: #@ data.values.image
           imagePullPolicy: Always
           volumeMounts:
           - name: cloud-controller-ng-yaml
