wip deploy from dockerhub capi image
[#170714119]

Co-authored-by: Renee Chu <rchu@pivotal.io>
Co-authored-by: Oleksandr Slynko <oslynko@pivotal.io>
Co-authored-by: Seth Boyles <sboyles@pivotal.io>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -23,16 +23,16 @@ spec:
       imagePullSecrets: #@ data.values.imagePullSecrets
       initContainers:
         - name: pre-start
-          image: localhost:5000/capi
+          image: #@ data.values.image.repository
           imagePullPolicy: Always
           command:
-          - /cloud_controller_ng/pre-start.sh
+          - /cloud_controller_ng/setup_database.sh
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
       containers:
         - name: capi-api-server
-          image: localhost:5000/capi
+          image: #@ data.values.image.repository
           imagePullPolicy: Always
           volumeMounts:
           - name: server-sock
