--- a/templates/opi-secrets.yml
+++ b/templates/opi-secrets.yml
@@ -6,7 +6,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: opi-secrets
-  namespace: cf-system
+  namespace: #@ data.values.namespace
 data:
   opi.ca: #@ base64.encode(data.values.apiServer.opi.ca)
   opi.crt: #@ base64.encode(data.values.apiServer.opi.client_cert)
