--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-api-server
-  namespace: cf-system
+  namespace: #@ data.values.namespace
 spec:
   replicas: 2
   strategy:
