--- a/templates/ccng-configmap.yml
+++ b/templates/ccng-configmap.yml
@@ -6,6 +6,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloud-controller-ng-yaml
-  namespace: cf-system
+  namespace: #@ data.values.namespace
 data:
   cloud_controller_ng.yml: #@ yaml.encode(ccng_config())
