--- a/templates/clock_deployment.yml
+++ b/templates/clock_deployment.yml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: capi-clock
-  namespace: cf-system
+  namespace: #@ data.values.namespace
 spec:
   replicas: 1
   strategy:
