--- a/templates/nginx-configmap.yml
+++ b/templates/nginx-configmap.yml
@@ -1,9 +1,10 @@
+#@ load("@ytt:data", "data")
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx
-  namespace: cf-system
+  namespace: #@ data.values.namespace
 data:
   nginx.conf: |
     error_log /cloud_controller_ng/nginx-error.log error;
