Make ccng and nginx configmaps versioned
See https://github.com/k14s/kapp/blob/master/docs/diff.md#versioned-resources

--- a/templates/ccng-configmap.yml
+++ b/templates/ccng-configmap.yml
@@ -7,5 +7,7 @@ kind: ConfigMap
 metadata:
   name: cloud-controller-ng-yaml
   namespace: #@ data.values.namespace
+  annotations:
+    kapp.k14s.io/versioned: ""
 data:
   cloud_controller_ng.yml: #@ yaml.encode(ccng_config())
