--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -22,7 +22,7 @@ spec:
           workingDir: "/cloud_controller_ng"
           command: ["/usr/local/bin/bundle"]
           args: ["exec", "rake", "jobs:generic"]
-          image: #@ data.values.image
+          image: #@ data.values.images.ccng
           imagePullPolicy: Always
           volumeMounts:
           - name: cloud-controller-ng-yaml
